--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=MyRoad
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FHGzOGOY3cKHf+40WH9BD4zGnuLdzfIe9UT6EBujfPU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8009
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=myroad
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -57,3 +57,13 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_PORT=8009
+VITE_PORT=5175
+SAIL_XDEBUG_MODE=develop,debug
+FORWARD_DB_PORT=3310
+
+SANCTUM_EXPIRATION=120
+ACTIVITY_LOGGER_ENABLED=true
+
+L5_SWAGGER_GENERATE_ALWAYS=true
