--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -30,23 +30,29 @@ endpoints:
         name: email
         description: 'The email of the user.'
         required: true
-        example: mwiza@example.org
+        example: admin@example.com
         type: string
         enumValues: []
-        exampleWasSpecified: false
+        exampleWasSpecified: true
         custom: []
       password:
         name: password
         description: 'The password of the user.'
         required: true
-        example: '.Gz%P}yL;?[Cy}W%p)^4'
+        example: |-
+          password
+
+          use editor@example.com and password for different permissions
         type: string
         enumValues: []
-        exampleWasSpecified: false
+        exampleWasSpecified: true
         custom: []
     cleanBodyParameters:
-      email: mwiza@example.org
-      password: '.Gz%P}yL;?[Cy}W%p)^4'
+      email: admin@example.com
+      password: |-
+        password
+
+        use editor@example.com and password for different permissions
     fileParameters: []
     responses:
       -
