--- a/.scribe/endpoints/02.yaml
+++ b/.scribe/endpoints/02.yaml
@@ -4,7 +4,7 @@ endpoints:
   -
     httpMethods:
       - POST
-    uri: api/v1/tours
+    uri: api/v1/admin/tours
     metadata:
       groupName: 'Tour Endpoints'
       groupDescription: ''
@@ -70,7 +70,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer hZD68av5fPV6g1k3acdebE4'
+      - 'Bearer kaVb481cevhP5DaEfdZ6g63'
     controller: null
     method: null
     route: null
@@ -180,7 +180,7 @@ endpoints:
           cache-control: 'no-cache, private'
           content-type: application/json
           x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '57'
+          x-ratelimit-remaining: '59'
           access-control-allow-origin: '*'
         description: null
         custom: []
@@ -188,7 +188,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer Efhaab36g1eP5kDc8vdVZ64'
+      - 'Bearer fc8dh5eV364k16ZvDaabEgP'
     controller: null
     method: null
     route: null
