--- a/.scribe/endpoints/02.yaml
+++ b/.scribe/endpoints/02.yaml
@@ -65,12 +65,29 @@ endpoints:
       endingDate: '2024-01-08'
       price: 1000
     fileParameters: []
-    responses: []
+    responses:
+      -
+        status: 201
+        content: |-
+          {
+             "success": true,
+             "data": {
+                 "id": "9b20f8e0-b615-4090-8702-e8bf7adedc82",
+                 "travelId": "4f4bd032-e7d4-402a-bdf6-aaf6be240d53",
+                 "name": "ITICE20211107",
+                 "startingDate": "2021-11-07",
+                 "endingDate": "2021-11-15",
+                 "price": 213
+             }
+          }
+        headers: []
+        description: ''
+        custom: []
     responseFields: []
     auth:
       - headers
       - Authorization
-      - 'Bearer kaVb481cevhP5DaEfdZ6g63'
+      - 'Bearer 3Dc4PekhgVbd168vaE65aZf'
     controller: null
     method: null
     route: null
@@ -175,20 +192,67 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"id":"9b1ef570-7910-4cff-b26d-677da3fdd9f9","travelId":"cbf304ae-a335-43fa-9e56-811612dcb601","name":"ITUNI20240101","startingDate":"2024-01-01","endingDate":"2024-01-08","price":1000},{"id":"90155d92-01e5-4c4b-a5a8-e24011fa8418","travelId":"cbf304ae-a335-43fa-9e56-811612dcb601","name":"ITUNI20240121","startingDate":"2024-01-21","endingDate":"2024-01-28","price":1799}],"links":{"first":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=1","last":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=2","prev":null,"next":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=2"},"meta":{"current_page":1,"from":1,"last_page":2,"links":[{"url":null,"label":"&laquo; Previous","active":false},{"url":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=1","label":"1","active":true},{"url":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=2","label":"2","active":false},{"url":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours?priceFrom=100&priceTo=10000&dateFrom=2024-01-01&dateTo=2024-12-31&sortBy=price&sortOrder=asc&page=2","label":"Next &raquo;","active":false}],"path":"http:\/\/localhost:8009\/api\/v1\/travel\/united-arab-emirates-from-dubai-to-abu-dhabi\/tours","per_page":2,"to":2,"total":4}}'
-        headers:
-          cache-control: 'no-cache, private'
-          content-type: application/json
-          x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '59'
-          access-control-allow-origin: '*'
-        description: null
+        content: |-
+          {
+             "data": [
+                 {
+                     "id": "7f0ff8cc-6b19-407e-9915-279ad76c0b5c",
+                     "travelId": "cbf304ae-a335-43fa-9e56-811612dcb601",
+                     "name": "ITUNI20240112",
+                     "startingDate": "2024-01-12",
+                     "endingDate": "2024-01-20",
+                     "price": 1899
+                 },
+                 {
+                     "id": "90155d92-01e5-4c4b-a5a8-e24011fa8418",
+                     "travelId": "cbf304ae-a335-43fa-9e56-811612dcb601",
+                     "name": "ITUNI20240121",
+                     "startingDate": "2024-01-21",
+                     "endingDate": "2024-01-28",
+                     "price": 1899
+                 }
+             ],
+             "links": {
+                 "first": "http://localhost:8009/api/v1/travel/united-arab-emirates-from-dubai-to-abu-dhabi/tours?sortBy=price&sortOrder=desc&priceFrom=10&page=1",
+                 "last": "http://localhost:8009/api/v1/travel/united-arab-emirates-from-dubai-to-abu-dhabi/tours?sortBy=price&sortOrder=desc&priceFrom=10&page=1",
+                 "prev": null,
+                 "next": null
+             },
+             "meta": {
+                 "current_page": 1,
+                 "from": 1,
+                 "last_page": 1,
+                 "links": [
+                     {
+                         "url": null,
+                         "label": "&laquo; Previous",
+                         "active": false
+                     },
+                     {
+                         "url": "http://localhost:8009/api/v1/travel/united-arab-emirates-from-dubai-to-abu-dhabi/tours?sortBy=price&sortOrder=desc&priceFrom=10&page=1",
+                         "label": "1",
+                         "active": true
+                     },
+                     {
+                         "url": null,
+                         "label": "Next &raquo;",
+                         "active": false
+                     }
+                 ],
+                 "path": "http://localhost:8009/api/v1/travel/united-arab-emirates-from-dubai-to-abu-dhabi/tours",
+                 "per_page": 2,
+                 "to": 2,
+                 "total": 2
+             }
+          }
+        headers: []
+        description: ''
         custom: []
     responseFields: []
     auth:
       - headers
       - Authorization
-      - 'Bearer fc8dh5eV364k16ZvDaabEgP'
+      - 'Bearer ahgaPEvef6DV4685kd13bZc'
     controller: null
     method: null
     route: null
