--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Run tests
-      run: php artisan test
+      run: ./vendor/bin/pest
