--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -67,3 +67,4 @@ SANCTUM_EXPIRATION=120
 ACTIVITY_LOGGER_ENABLED=true
 
 L5_SWAGGER_GENERATE_ALWAYS=true
+CACHE_DRIVER=redis
