--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,10 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
       redis:
-        image: 'redis:alpine'
+        image: redis
+        ports:
+          - 6379/tcp
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
     - name: Checkout code
@@ -52,12 +55,13 @@ jobs:
     - name: Optimize Project
       run: php artisan optimize:clear
 
+    - name: Run migration
+      run: php artisan migrate -v
+
     - name: Run tests
       env:
         DB_CONNECTION: mysql
         DB_DATABASE: myroad
         DB_USER: sail
         DB_PASSWORD: password
-      run: |
-        php artisan migrate
-        php artisan test
+      run: php artisan test
