--- a/ci.env
+++ b/ci.env
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=myroad
-DB_USERNAME=sail
+DB_USERNAME=root
 DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
@@ -67,4 +67,4 @@ SANCTUM_EXPIRATION=120
 ACTIVITY_LOGGER_ENABLED=true
 
 L5_SWAGGER_GENERATE_ALWAYS=true
-CACHE_DRIVER=redis
+CACHE_DRIVER=array
