--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,4 +66,7 @@ jobs:
         DB_DATABASE: myroad
         DB_USERNAME: root
         DB_PASSWORD: password
+        REDIS_HOST: 127.0.0.1
+        REDIS_PASSWORD: null
+        REDIS_PORT: 6379
       run: php artisan test
