--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,16 @@ jobs:
     - name: Copy .env
       run: cp -v ci.env .env
 
+    - name: Cache Vendor
+      id: cache-vendor
+      uses: actions/cache@v3
+      with:
+        path: vendor
+        key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
+
     - name: Install dependencies
+      # Skip if cache hit
+      if: steps.cache-vendor.outputs.cache-hit != 'true'
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Generate key
