--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,52 +30,52 @@ jobs:
         options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: mbstring, dom, fileinfo, mysql
-        coverage: none
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.2"
+          extensions: mbstring, dom, fileinfo, mysql
+          coverage: none
 
-    - name: Copy .env
-      run: cp -v ci.env .env
+      - name: Copy .env
+        run: cp -v ci.env .env
 
-    - name: Cache Vendor
-      id: cache-vendor
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
+      - name: Cache Vendor
+        id: cache-vendor
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-vendor-${{ hashFiles('**/composer.lock') }}
 
-    - name: Install dependencies
-      # Skip if cache hit
-      if: steps.cache-vendor.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
+      - name: Install dependencies
+        # Skip if cache hit
+        if: steps.cache-vendor.outputs.cache-hit != 'true'
+        run: composer install --prefer-dist --no-progress --no-suggest
 
-    - name: Generate key
-      run: php artisan key:generate
+      - name: Generate key
+        run: php artisan key:generate
 
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
-    - name: Optimize Project
-      run: php artisan optimize:clear
+      - name: Optimize Project
+        run: php artisan optimize:clear
 
-    - name: Run migration
-      run: php artisan migrate:fresh --seed
+      - name: Run migration
+        run: php artisan migrate:fresh --seed
 
-    - name: Run tests
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_PORT: 3306
-        DB_DATABASE: myroad
-        DB_USERNAME: root
-        DB_PASSWORD: password
-        REDIS_HOST: 127.0.0.1
-        REDIS_PASSWORD: null
-        REDIS_PORT: 6379
-      run: php artisan test
+      - name: Run tests
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: myroad
+          DB_USERNAME: root
+          DB_PASSWORD: password
+          REDIS_HOST: 127.0.0.1
+          REDIS_PASSWORD: null
+          REDIS_PORT: 6379
+        run: php artisan test
