--- a/.scribe/endpoints/02.yaml
+++ b/.scribe/endpoints/02.yaml
@@ -87,7 +87,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 3Dc4PekhgVbd168vaE65aZf'
+      - 'Bearer 418fZEeDcvgkaba66VP3h5d'
     controller: null
     method: null
     route: null
@@ -252,7 +252,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer ahgaPEvef6DV4685kd13bZc'
+      - 'Bearer bce5D6463EZVahgdvf8Pak1'
     controller: null
     method: null
     route: null
